<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_how_to"
        android:textSize="20sp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:id="@+id/read_how_to"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_tutorial"
        android:id="@+id/textView"
        android:layout_below="@+id/read_how_to"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="#0BBDB0"
        android:onClick="goToTutorial" />

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:id="@+id/tutorial_logo"
        android:layout_below="@+id/read_how_to"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:src="@drawable/tutorial_logo"
        android:maxHeight="32dp"
        android:maxWidth="32dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/I_know_how_to_do_a_fan"
        android:id="@+id/checkBox"
        android:layout_marginTop="12dp"
        android:checked="false"
        android:layout_below="@+id/tutorial_logo"
        android:layout_alignLeft="@+id/tutorial_logo"
        android:layout_alignStart="@+id/tutorial_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/do_not_show_this_screen"
        android:id="@+id/textView2"
        android:layout_below="@+id/checkBox"
        android:layout_centerHorizontal="true"
        android:textSize="12sp" />

    <Button
        android:layout_width="160dp"
        android:layout_height="32dp"
        android:text="@string/make_fan"
        android:id="@+id/button"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="#0BBDB0"
        android:textColor="#ffffff" />

</RelativeLayout>
